--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "Fisher Dong",
   "devDependencies": {
     "ava": "~0.25.0",
+    "eslint": "^5.11.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "moment": "^2.22.2"
   }
 }
